--- a/mvp_alzheimer_projeto/pubspec.yaml
+++ b/mvp_alzheimer_projeto/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   flutter_slidable: ^1.2.0
   jiffy: ^5.0.0
+  image_picker: ^0.8.5
 
 
   # The following adds the Cupertino Icons font to your application.
