--- a/mvp_alzheimer_projeto/pubspec.yaml
+++ b/mvp_alzheimer_projeto/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   permission_handler: ^9.2.0
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
+  geolocator: #latest version
+  geocoding:  #latest version
 
 
   # The following adds the Cupertino Icons font to your application.
