--- a/mvp_alzheimer_projeto/pubspec.yaml
+++ b/mvp_alzheimer_projeto/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,11 +31,8 @@ dependencies:
     sdk: flutter
   flutter_slidable: ^1.2.0
   jiffy: ^5.0.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +57,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/pelezin.jpg
+    - assets/icons/Memoria.png
+    - assets/icons/Familia.png
+    - assets/icons/Mapa.png
+    - assets/icons/Remedio.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
