--- a/mvp_alzheimer_projeto/android/app/src/main/AndroidManifest.xml
+++ b/mvp_alzheimer_projeto/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
    <application
         android:label="Alzheimer"
         android:name="${applicationName}"
